# megatron-tp

./: .gitignore  pyproject.toml
megatron/: initialize.py  layers.py  mapping.py  pipegoose_utils.py  random.py  testing.py
scripts/: log.txt  log2.txt  notebook.ipynb  run_tp.py  run_tp_mnist.py  sanity_check.py  test_tp.py  tmp.py
