[tool.poetry]
name = "megatron"
version = "0.1.0"
description = ""
authors = ["xrsrke <b3f0cus@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.1"
transformers = "^4.35.2"
datasets = "^2.15.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
